# actix-request-hook

./: .gitignore  CONTRIBUTING.md  Cargo.toml  LICENSE-MIT  README.md
.cargo/: config.toml
.github/workflows/: ci.yml
src/: lib.rs  observer.rs  util.rs
src/tests/: mod.rs  test_observer.rs  test_service.rs
